Login Simplified with defaultUrl attribute added, Done All Tables less the Users one

--- a/Web.config
+++ b/Web.config
@@ -93,7 +93,7 @@
 
     <!-- accionar a autenticacao da framework   name="nome do token" loginUrl="pagina onde é redireccionado caso nao seja" -->
     <authentication mode="Forms">
-      <forms name=".NOSSAAPP" loginUrl="Login.aspx"></forms>
+      <forms name=".NOSSAAPP" loginUrl="Login.aspx" defaultUrl="~/Admin"></forms>
     </authentication>
 
     <authorization>
