Login system complete

--- a/Web.config
+++ b/Web.config
@@ -92,37 +92,46 @@
     <!-- AULA START-->
 
     <!-- accionar a autenticacao da framework   name="nome do token" loginUrl="pagina onde é redireccionado caso nao seja" -->
-    <authentication mode="Forms">
+    <!--<authentication mode="Forms">
       <forms name=".NOSSAAPP" loginUrl="Login.aspx" defaultUrl="~/Admin"></forms>
-    </authentication>
+    </authentication>-->
 
-    <authorization>
-      <!--   <deny users="?"/> negar o acesso a anónimos -->
+    <!--<authorization>
+      --><!--   <deny users="?"/> negar o acesso a anónimos --><!--
       <allow users="?"/>
-    </authorization>
+    </authorization>-->
 
     <!-- AULA END -->
+
+
+    <customErrors mode="On" defaultRedirect="~/ErrorPage.aspx">
+      <error statusCode="404" redirect="~/ErrorPage.aspx"/>
+    </customErrors>
+
+
   </system.web>
 
   <!-- AULA START -->
 
   <!-- permitir o acesso aos ficheiros dentro da pasta Admin quando for um Administrador a logar -->
-  <location path="Admin">
+  <!--<location path="Admin">
     <system.web>
       <authorization>
-        <deny users="?"/>
+        <allow roles="TW_ADMIN" />
+        <deny users="*"/>
       </authorization>
     </system.web>
-  </location>
+  </location>-->
 
   <!-- permitir o acesso aos ficheiros dentro da pasta User quando for um User a logar -->
-  <location path="User">
+  <!--<location path="User">
     <system.web>
       <authorization>
-        <deny users="?"/>
+        <allow roles="TW_USER" />
+        <deny users="*"/>
       </authorization>
     </system.web>
-  </location>
+  </location>-->
   
   <!-- para criar outros acessos é repetir o trecho de código acima-->
 
@@ -131,10 +140,10 @@
 
 
 
-  <appSettings>
+  <!--<appSettings>-->
     <!--<add key="owin:AutomaticAppStartup " value="false" />-->
     <!--<add key="owin:appStartup" value="MinhaClasse" />-->
-  </appSettings>
+  <!--</appSettings>-->
   
   
 <!-- PASSO 5 START -->
