--- a/Web.config
+++ b/Web.config
@@ -104,9 +104,9 @@
     <!-- AULA END -->
 
 
-    <customErrors mode="On" defaultRedirect="~/ErrorPage.aspx">
+    <!--<customErrors mode="On" defaultRedirect="~/ErrorPage.aspx">
       <error statusCode="404" redirect="~/ErrorPage.aspx"/>
-    </customErrors>
+    </customErrors>-->
 
 
   </system.web>
